--- a/package.json
+++ b/package.json
@@ -79,5 +79,18 @@
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
     "vite": "^5.4.19"
-  }
+  },
+  "description": "**URL**: https://lovable.dev/projects/dcd29519-1814-4a0f-9c10-2e9c7f977d36",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Indra1806/indra-showcase-ai.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Indra1806/indra-showcase-ai/issues"
+  },
+  "homepage": "https://github.com/Indra1806/indra-showcase-ai#readme"
 }
